# scatools

./: .gitignore  LICENSE  README.md  example.ipynb  flake.nix  flake2.nix  pyproject.toml  setup.py  val_str.npy  waves.vcd
scatools/: __init__.py  leakage_models.py  plotting.py  scatools.py  serial_target.py  vcd_batch_processor.py  vcd_processor.py  vcd_utils.ipynb
scatools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vcds/: dummy-vivado.vcd  gen.sh  hazard5.h5  sbox  sbox_0.vcd  sbox_1.vcd  sbox_10.vcd  sbox_100.vcd  sbox_101.vcd  sbox_102.vcd  sbox_103.vcd  sbox_104.vcd  sbox_105.vcd  sbox_106.vcd  sbox_107.vcd  sbox_108.vcd  sbox_109.vcd  sbox_11.vcd  sbox_110.vcd  sbox_111.vcd  sbox_112.vcd  sbox_113.vcd  sbox_114.vcd  sbox_115.vcd  sbox_116.vcd  sbox_117.vcd  sbox_118.vcd  sbox_119.vcd  sbox_12.vcd  sbox_120.vcd  sbox_121.vcd  sbox_122.vcd  sbox_123.vcd  sbox_124.vcd  sbox_125.vcd  sbox_126.vcd  sbox_127.vcd  sbox_128.vcd  sbox_129.vcd  sbox_13.vcd  (+221 more)
