[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scatools"
version = "0.1.1"
description = "A collection of tools for side-channel analysis with ChipWhisperer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yusuf Hegazy", email = "y@hegz.io" }]
keywords = ["side-channel", "sca", "chipwhisperer", "hardware-security", "snr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "plotly",
    "tqdm",
    "scalib",
    "pyserial",
    "ipython",
    "chipwhisperer",
]

[project.urls]
Homepage = "https://github.com/hegzploit/scatools"
Repository = "https://github.com/hegzploit/scatools"

[tool.hatch.build.targets.wheel]
packages = ["scatools"]
